parser/src/parser/snapshots/enderpy__parser__parser__tests__fstring-2.snap
---
source: src/parser/parser.rs
description: "f'hello_{a}'"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 8,
                                    end: 0,
                                },
                                value: Str(
                                    "hello_",
                                ),
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 9,
                                    end: 10,
                                },
                                id: "a",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
