parser/src/parser/snapshots/enderpy__parser__parser__tests__fstring.snap
---
source: src/parser/parser.rs
description: "f'a'"
---
Module {
    node: Node {
        start: 0,
        end: 4,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 4,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 3,
                                    end: 0,
                                },
                                value: Str(
                                    "a",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
