parser/src/parser/snapshots/enderpy__parser__parser__tests__lambda-2.snap
---
source: src/parser/parser.rs
description: "lambda a: a"
---
Module {
    node: Node {
        start: 0,
        end: 11,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 11,
                    },
                    args: Arguments {
                        node: Node {
                            start: 7,
                            end: 8,
                        },
                        posonlyargs: [],
                        args: [
                            Arg {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                arg: "a",
                                annotation: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 10,
                                end: 11,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
