parser/src/parser/snapshots/enderpy__parser__parser__tests__lambda-4.snap
---
source: src/parser/parser.rs
description: "lambda a, b, c: a"
---
Module {
    node: Node {
        start: 0,
        end: 17,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 17,
                    },
                    args: Arguments {
                        node: Node {
                            start: 7,
                            end: 14,
                        },
                        posonlyargs: [],
                        args: [
                            Arg {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                arg: "a",
                                annotation: None,
                            },
                            Arg {
                                node: Node {
                                    start: 10,
                                    end: 11,
                                },
                                arg: "b",
                                annotation: None,
                            },
                            Arg {
                                node: Node {
                                    start: 13,
                                    end: 14,
                                },
                                arg: "c",
                                annotation: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 16,
                                end: 17,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
