parser/src/parser/snapshots/enderpy__parser__parser__tests__lambda-5.snap
---
source: src/parser/parser.rs
description: "lambda a, *b: a"
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 15,
                    },
                    args: Arguments {
                        node: Node {
                            start: 7,
                            end: 12,
                        },
                        posonlyargs: [],
                        args: [
                            Arg {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                arg: "a",
                                annotation: None,
                            },
                        ],
                        vararg: Some(
                            Arg {
                                node: Node {
                                    start: 11,
                                    end: 12,
                                },
                                arg: "b",
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 14,
                                end: 15,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
